FIX: Se ajusta el z-index para el modal-style.css

--- a/custom-modal-plugin/modal-style.css
+++ b/custom-modal-plugin/modal-style.css
@@ -2,7 +2,7 @@
 .custom-modal {
     display: none; /* Oculto por defecto */
     position: fixed;
-    z-index: 1000;
+    z-index: 9000;
     left: 0;
     top: 0;
     width: 100%;
